@@ -6,6 +6,7 @@ Revision history for DBIx::Class::ResultSet::RecursiveUpdate
     - Reduce select queries for has_many relationships
       to one per non-prefetched or none for prefetched has_many relationships
       down from one per related row even for prefetched relationships
+    - Stable update order by sorting all columns and relationships
 
 0.34      2014-02-06 23:37:32 America/New_York
     - More changes to support custom CODE relationship condition
